--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Leonard "Sylvan" Aronson</title>
+     <title>Project Name</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inknut+Antiqua">
@@ -11,29 +11,21 @@
  </head>
  <body>
      <header>
-     <h1 class="page-header">Leonard "Sylvan" Aronson</h1>
+     <h1 class="page-header">Site Name</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="https://github.com/SylvanAronson/my-portal" target="_blank">My Portal (You're here!)</a>
-            <a href="https://github.com/SylvanAronson/stylin-with-css" target="_blank">Stylin' With CSS</a>
-            <a href="https://github.com/SylvanAronson" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/leonardaronson/" target="_blank">LinkedIn</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
      
    <main class="wrapper">
-        <picture class="profile">
-            <source media="(min-width: 1200px)" srcset="images/desktop.jpg">
-            <source media="(min-width: 501px)" srcset="images/tablet.jpg">
-            <img src="images/phone.jpg" alt="That's me!">
-        </picture>   
-       <h2 class="subheader">About Me</h2>
-       
-       <p>I'm Sylvan, an upcoming Application Development student with YearUp who will one day create an inspirational video game known around the world. "That's certainly a tall order!" you may be thinking, and I have to agree with you-- it's gonna be extremely tough to reach that dream, but I am taking it one step at a time, starting with this website. I have three years of experience with QA testing in game development, as well as twenty years experience in learning to write fictional stories and collaborating on them with others or from another's source material. 
-       </p>
+       <h2 class="subheader">Project Name</h2>
 
-       <p>To get closer to my dream, I decided to take initiative and join YearUp, rather than waiting around for life to give me what I wanted. This portal website will take you to my GitHub and LinkedIn, where I proudly display my attempts at wrangling HTML, CSS, and Javascript into doing my bidding.</p>
+     <p>Content goes here.</p>
+
      <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
           Leonard Aronson, All Rights Reserved ~ 
