--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
      <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
           Leonard Aronson, All Rights Reserved ~ 
-          <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
-          <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
+          <a id="html-checker" href="https://sylvanaronson.github.io/html-template/" target="_blank">Check HTML</a> ~ 
+          <a id="css-checker" href="https://sylvanaronson.github.io/html-template/" target="_blank">Check CSS</a></small>
      </p>
     </footer>
   </main>
