--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/forms.css">
+  <style>
+    .hamlet{
+     /*background-color: yellow;*/
+    }
+
+    #play span{
+      /*background-color: blue;*/
+    }
+
+  </style>
  </head>
  <body>
      <header>
@@ -22,10 +32,15 @@
      </header>
      
    <main class="wrapper">
-       <h2 class="subheader">Project Name</h2>
-
-     <p>Content goes here.</p>
-
+       <h2 class="subheader">DOM Play</h2>
+      <div id="play">
+        <p><span>Jack: The Slaughtered Lamb?</span></p>
+        <p><span>David: Of course, The Slaughtered Lamb.  Why else would they have a severed fox head on a spear as their symbol?</span></p>
+        <p><span>Jack: That's a wolf's head.</span></p>
+        <p><span>David: Of course, The Slaughtered Lamb.  Why else would they have a severed wolf's head on a spear as their symbol?</span></p>
+        <p><span>Jack: That's not a spear.  It's a pike.</span></p>
+        <p><span>David: A severed wolf's head on a pike as their symbol.</span></p>
+      </div>
      <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
           Leonard Aronson, All Rights Reserved ~ 
